# rutube_test

./: .gitignore  Dockerfile  README.md  pyproject.toml
models/: model.pt
src/: bot.py  config.py  main.py  model.py  settings.json  utils.py
